// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test disabling of a ListItem control 1`] = `
<ListItem
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  layout={4}
  leftButton={null}
  location="none"
  noedit={false}
  noripple={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  rightButton={null}
  selected={false}
  sizing="normal"
  stacked={false}
  style={Object {}}
  title="test title"
  useedit={false}
  visible={true}
  widget={null}
>
  <Item
    backgroundColor="inherit"
    borderColor="inherit"
    borderWidth="none"
    className="ui-listitem listItem disabled nohover"
    color="inherit"
    contentEditable={false}
    direction="right"
    disabled={true}
    focus={false}
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id=""
    layout={4}
    leftButton={null}
    location="none"
    noedit={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    rightButton={null}
    selected={false}
    sizing="normal"
    stacked={false}
    style={Object {}}
    title="test title"
    useedit={false}
    visible={true}
    widget={null}
  >
    <li
      className="ui-item item ui-listitem listItem disabled nohover disabled nohover"
      id=""
      onBlur={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseOut={[Function]}
      style={Object {}}
    >
      <Title
        backgroundColor="inherit"
        borderColor="inherit"
        borderWidth="none"
        className="itemTitle"
        color="inherit"
        contentEditable={false}
        direction="right"
        disabled={true}
        focus={false}
        hiddenLeftButton={false}
        hiddenRightButton={false}
        href={
          Object {
            "selectHandler": [Function],
            "sizing": "normal",
          }
        }
        id=""
        layout={4}
        leftButton={null}
        location="none"
        noedit={false}
        noripple={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseOut={[Function]}
        onSelect={[Function]}
        onUpdate={[Function]}
        rightButton={null}
        selected={false}
        sizing="normal"
        stacked={false}
        style={
          Object {
            "padding": "2px 4px",
          }
        }
        title="test title"
        useedit={false}
        visible={true}
        widget={null}
      >
        <div
          className="ui-title-bar normal titleBar itemTitle disabled nohover"
          style={
            Object {
              "padding": "2px 4px",
            }
          }
        >
          <Label
            backgroundColor="inherit"
            borderColor="inherit"
            borderWidth="none"
            className="ui-title titleDominant"
            color="inherit"
            contentEditable={false}
            direction="right"
            disabled={true}
            focus={false}
            hiddenLeftButton={false}
            hiddenRightButton={false}
            href={
              Object {
                "selectHandler": [Function],
                "sizing": "normal",
              }
            }
            id=""
            layout={4}
            leftButton={null}
            location="none"
            noedit={false}
            noripple={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseOut={[Function]}
            onSelect={[Function]}
            onUpdate={[Function]}
            rightButton={null}
            selected={false}
            sizing="normal"
            stacked={false}
            style={
              Object {
                "padding": "2px 4px",
              }
            }
            text="test title"
            title="test title"
            useedit={false}
            visible={true}
            widget={null}
          >
            <span
              className="ui-label label normal ui-title titleDominant disabled nohover"
              contentEditable={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "inherit",
                  "padding": "2px 4px",
                }
              }
              suppressContentEditableWarning={true}
            >
              test title
            </span>
          </Label>
          <div
            className="ui-title-widget widgetDominant"
          />
        </div>
      </Title>
    </li>
  </Item>
</ListItem>
`;

exports[`Test making ListItem control invisible 1`] = `
<ListItem
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className=""
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  layout={4}
  leftButton={null}
  location="none"
  noedit={false}
  noripple={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  rightButton={null}
  selected={false}
  sizing="normal"
  stacked={false}
  style={Object {}}
  title="test title"
  useedit={false}
  visible={false}
  widget={null}
>
  <Item
    backgroundColor="inherit"
    borderColor="inherit"
    borderWidth="none"
    className="ui-listitem listItem invisible"
    color="inherit"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id=""
    layout={4}
    leftButton={null}
    location="none"
    noedit={false}
    noripple={false}
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    rightButton={null}
    selected={false}
    sizing="normal"
    stacked={false}
    style={Object {}}
    title="test title"
    useedit={false}
    visible={false}
    widget={null}
  >
    <li
      className="ui-item item ui-listitem listItem invisible invisible"
      id=""
      onBlur={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseOut={[Function]}
      style={Object {}}
    >
      <Title
        backgroundColor="inherit"
        borderColor="inherit"
        borderWidth="none"
        className="itemTitle"
        color="inherit"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        hiddenLeftButton={false}
        hiddenRightButton={false}
        href={
          Object {
            "selectHandler": [Function],
            "sizing": "normal",
          }
        }
        id=""
        layout={4}
        leftButton={null}
        location="none"
        noedit={false}
        noripple={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDoubleClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseOut={[Function]}
        onSelect={[Function]}
        onUpdate={[Function]}
        rightButton={null}
        selected={false}
        sizing="normal"
        stacked={false}
        style={
          Object {
            "padding": "2px 4px",
          }
        }
        title="test title"
        useedit={false}
        visible={false}
        widget={null}
      >
        <div
          className="ui-title-bar normal titleBar ripple itemTitle invisible"
          style={
            Object {
              "padding": "2px 4px",
            }
          }
        >
          <Label
            backgroundColor="inherit"
            borderColor="inherit"
            borderWidth="none"
            className="ui-title titleDominant"
            color="inherit"
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            hiddenLeftButton={false}
            hiddenRightButton={false}
            href={
              Object {
                "selectHandler": [Function],
                "sizing": "normal",
              }
            }
            id=""
            layout={4}
            leftButton={null}
            location="none"
            noedit={false}
            noripple={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseOut={[Function]}
            onSelect={[Function]}
            onUpdate={[Function]}
            rightButton={null}
            selected={false}
            sizing="normal"
            stacked={false}
            style={
              Object {
                "padding": "2px 4px",
              }
            }
            text="test title"
            title="test title"
            useedit={false}
            visible={false}
            widget={null}
          >
            <span
              className="ui-label label normal ui-title titleDominant invisible"
              contentEditable={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "inherit",
                  "padding": "2px 4px",
                }
              }
              suppressContentEditableWarning={true}
            >
              test title
            </span>
          </Label>
          <div
            className="ui-title-widget widgetDominant"
          />
        </div>
      </Title>
    </li>
  </Item>
</ListItem>
`;

exports[`Test retrieval of ListItem props object 1`] = `
Object {
  "backgroundColor": "inherit",
  "borderColor": "inherit",
  "borderWidth": "none",
  "className": "",
  "color": "inherit",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "hiddenLeftButton": false,
  "hiddenRightButton": false,
  "href": Object {
    "selectHandler": [Function],
    "sizing": "normal",
  },
  "id": "",
  "layout": 4,
  "leftButton": null,
  "location": "none",
  "noedit": false,
  "noripple": false,
  "onBlur": [Function],
  "onChange": [Function],
  "onClick": [Function],
  "onDoubleClick": [Function],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onMouseOut": [Function],
  "onSelect": [Function],
  "onUpdate": [Function],
  "rightButton": null,
  "selected": false,
  "sizing": "normal",
  "stacked": false,
  "style": Object {},
  "title": "",
  "useedit": false,
  "visible": true,
  "widget": null,
}
`;

exports[`Test the creation of a ListItem control with left & right title 1`] = `
<Item
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className="ui-listitem listItem"
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  layout={4}
  leftButton={null}
  location="none"
  noedit={false}
  noripple={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  rightButton={null}
  selected={false}
  sizing="normal"
  stacked={false}
  style={Object {}}
  title="test title left"
  useedit={false}
  visible={true}
  widget="test title right"
/>
`;

exports[`Test the creation of a ListItem control with simple title 1`] = `
<Item
  backgroundColor="inherit"
  borderColor="inherit"
  borderWidth="none"
  className="ui-listitem listItem"
  color="inherit"
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  layout={4}
  leftButton={null}
  location="none"
  noedit={false}
  noripple={false}
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  rightButton={null}
  selected={true}
  sizing="normal"
  stacked={false}
  style={Object {}}
  title="test title"
  useedit={false}
  visible={true}
  widget={null}
/>
`;
